--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
+    "rc-slider": "^9.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
